# Wasm-mem-import

./: Cargo.toml
src/: main.rs
wasm-modules/: .project  alloc.wasm  transformation.wasm
wasmModule/: Cargo.toml  build.rs
wasmModule/src/: lib.rs
wasmModule2/: Cargo.toml  build.rs
wasmModule2/src/: lib.rs
