[package]
name = "wasmModule"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
arrow = {version = "6.3.0", default-features = false, features = ["ipc"]}
#arrow = { path = "/home/mohammadtn/Wasm-mem-import/arrow-rs/arrow", default-features = false, features = ["prettyprint"]}

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"